# cptpp-calculator

./: .gitignore  .gitmodules  .ocamlformat  .ocamlformat-ignore  LICENSE  Makefile  README.md  certificate_of_origin.typ  cptpp-calculator.opam  cptpp_calculator.opam  cptpp_calculator.opam.locked  draft.py  dune-project  output_fail.txt  output_pass.txt  parse.py  rocq-prover.opam.locked
.github/: sync_data.sh
.github/workflows/: 1-verify-release.yml  2-publish-release.yml  ci.yml  release.yml
calc/: Makefile  README.md  cptpp-calc.opam  cptpp-calculator.opam  dune-project
calc/lib/data/: README.md  country.ml  dune  hs_world_2022.ml
calc/lib/domain/: dune  good.ml  good.mli  hs_code.ml  hs_code.mli  hs_code_regional.ml  hs_code_regional.mli  material.ml  material.mli  money.ml  money.mli  rules.ml  tech_tree.ml  tech_tree.mli
calc/lib/engine/: dune
calc/lib/parser/: dune
calc/test/alcotest/: dune  test_domain.ml
calc/test/qcheck/: dune
calc/tools/calculations/: dune  knapsack.ml
calc/tools/fuzzer/: .gitignore  Makefile  README.md  cptpp-fuzz.opam  dune-project  output_fail.txt  output_fail_no_chars_guard.txt  output_pass.txt  output_pass_no_chars_guard.txt
calc/tools/fuzzer/input/: seed_1.txt  seed_10.txt  seed_11.txt  seed_12.txt  seed_13.txt  seed_14.txt  seed_15.txt  seed_16.txt  seed_17.txt  seed_18.txt  seed_19.txt  seed_2.txt  seed_3.txt  seed_4.txt  seed_5.txt  seed_6.txt  seed_7.txt  seed_8.txt  seed_9.txt
calc/tools/fuzzer/lib/: dune
calc/tools/fuzzer/test/: check_queue.ml  dune  fuzz.ml  hs_code.dict  knapsack.ml  seed_generator.ml
cptpp/: Makefile  README.md  cptpp  cptpp.opam  dune-project  pyproject.toml
cptpp/data/cptpp/vnm/: effective-export-20221230.xlsx  effective-import-20221230.xlsx
cptpp/data/harmonized_system/hs_world_2022/: harmonized-system.csv  sections.csv
cptpp/examples/2-csv/: sections.csv
cptpp/ir/: README.md  country.ml  cptpp-parser.opam  cptpp.opam  dune  dune-project
cptpp/lib/: dune  file.ml  file.mli  lexer.ml  lexer.mli  main.ml  main.mli  parser.mly  syntax.ml
cptpp/lib/codegen/: cptpp.opam
cptpp/lib/driver/: dune  orchestrator.ml
cptpp/lib/ocaml-backend/: pass_manager.ml  pass_manager.mli
cptpp/lib/ocaml-backend/compressor/: bit_masker.ml  dune  layout.ml  vocab_compiler.ml
cptpp/lib/ocaml-backend/optimizer/: dune
cptpp/lib/ocaml-backend/reader/: dune  ir.ml
cptpp/lib/ocaml-backend/serializer/: bin_writer.ml  dune  format_header.ml
cptpp/lib/ocaml-backend/validator/: dune
cptpp/lib/parser/: parse_hs.py
cptpp/lib/proto/: ir.proto
cptpp/lib/rust-frontend/: Cargo.toml
cptpp/lib/rust-frontend/writer/: ffi_export.rs
cptpp/lib/rust-middleend/: Cargo.toml  dune
cptpp/lib/rust-middleend/datatype/: hs_code.rs  ir.rs
cptpp/lib/rust-middleend/writer/: buffer_write.rs
cptpp/parsed/: dune  dune-project
cptpp/raw_data/harmonized_system/hs_vnm_2022/: vietnam-harmonized-system-2026-raw.xlsx
cptpp/scripts/: __init__.py  experiments.ipynb  parse.py  parse_country.py  parse_hs.py
cptpp/test/: dune
cptpp/tools/: experiments.ipynb
data/: README.md  country.ml  hs_world_2022.ml
data/harmonized_system/: hs_world_2022.csv
docs/certificate_of_origin/: original_text.md
docs/forms/certificate_of_origin/: template.typ
docs/forms/certificate_of_origin_proof/: template.typ
generator/: README.md
generator/pdf/: Makefile
generator/pdf/examples/certificate_of_origin/: template.typ
input/: seed_1.txt  seed_10.txt  seed_11.txt  seed_17.txt  seed_2.txt  seed_3.txt  seed_5.txt  seed_6.txt  seed_7.txt  seed_8.txt  seed_9.txt
lib/: hs_code.ml  hs_code.mli
lib/data/: country.mli  dune  hs_world_2022.ml
lib/domain/: country.ml  country.mli  domain.ml  dune  good.ml  good.mli  hs_code.ml  hs_code.mli  hs_variant.ml  hs_variant.mli  material.ml  material.mli  money.mli  national_hs.ml  product.ml  product.mli  rules.ml  rules.mli  tech_tree.ml  tech_tree.mli  trade.ml  trade.mli
lib/engine/: cptpp.ml  cptpp.mli  dune
lib/parser/: dune  hs_matrix_parser.ml  hs_matrix_parser.mli
parsed/: README.md  dune  dune-project  hs_world_2022.ml  metadata.json
parsed/ocaml_files/: country.ml
pdf/: Makefile
pdf/examples/certificate_of_origin/: original_text.md
proofs/: _CoqProject  dune  extract.v
proofs/chapter3/: article5.v
proofs/cptpp/chapter3/: article5.v
runtime/: README.md  draft.py
runtime/docs/: LICENSE  README.md
runtime/forms/certificate_of_origin/: template.typ
runtime/forms/certificate_of_origin_proof/: template.typ
scripts/: countries.py  harmonized_system.py  parse.py  parse_country.py  parse_hs.py
test/: fuzz.ml  hs_code.dict  seeds.txt
test/crowbar/: README.md  dune  test_hs_code.ml.txt
test/integration/: dune
test/property/: dune  prop_domain.ml
test/unit/: dune  test_domain.ml  test_product.ml  test_trade.ml
