(lang dune 3.23)

(name cptpp-calc)

(generate_opam_files true)

(maintainers "Nguyen Hoang An <nguyenhoangan1235@gmail.com>")

(authors "Nguyen Hoang An")

(license "BSD-3-Clause")

(homepage "https://github.com/nguyenhoangan-monkey/cptpp-project")

(bug_reports "https://github.com/nguyenhoangan-monkey/cptpp-project/issues")

(package
 (name cptpp-calc)
 (synopsis "CPTPP rules of origin and tariffs calculator")
 (description
  "A compliance and regional value content rules engine for CPTPP tariffs evaluation.")
 (depends
  (ocaml
   (>= 5.4.0))
  zarith
  (alcotest :with-test)
  (qcheck :with-test)
  (qcheck-alcotest :with-test)))
