(lang dune 3.12)

(name cptpp)

(using menhir 2.1)

(generate_opam_files true)

(maintainers "Nguyen Hoang An <nguyenhoangan1235@gmail.com>")

(authors "Nguyen Hoang An")

(license "GPL-3.0-only")

(homepage "https://github.com/nguyenhoangan-monkey/cptpp-project")

(bug_reports "https://github.com/nguyenhoangan-monkey/cptpp-project/issues")

(package
 (name cptpp)
 (synopsis "Compiler pipeline")
 (depends
  (ocaml
   (>= 5.2.0))
  (dune
   (>= 3.0))
  sedlex
  menhir
  menhirLib))
