(lang dune 3.12)

(name cptpp)

(generate_opam_files true)

(maintainers "Nguyen Hoang An <nguyenhoangan1235@gmail.com>")

(authors "Nguyen Hoang An")

(license "GPL-3.0-only")

(homepage "https://github.com/nguyenhoangan-monkey/cptpp-project")

(bug_reports "https://github.com/nguyenhoangan-monkey/cptpp-project/issues")

(package
 (name cptpp)
 (synopsis "Compiler pipeline")
 (depends
  cmdliner
  (ocaml
   (>= 5.4.0))))
