(library
 (name compiler_lib)
 (modules file lexer parser typing knormal alpha closure virtual simm regalloc emit)
 (libraries cmdliner))

(executable
 (name main)
 (public_name cptpp)
 (modules main)
 (libraries compiler_lib cmdliner))

(executable
 (name experiments)
 (modules experiments)
 (libraries compiler_lib cmdliner))
