(rule
 (target hs_world_2022.csv)
 (action
  (copy
   %{workspace_root}/data/parsed/harmonized_system/hs_world_2022.csv
   %{target})))

(rule
 (target csv_data.ml)
 (deps hs_world_2022.csv)
 (action
  (with-outputs-to
   %{target}
   (progn
    (run echo "let data = {|")
    (run cat hs_world_2022.csv)
    (run echo "|}")))))

(library
 (name cptpp_calculator_parser)
 (public_name cptpp_calculator.parser)
 (modules :standard)
 (libraries csv zarith cptpp_calculator.domain))
