(lang dune 3.23)

(name cptpp-fuzz)

(generate_opam_files true)

(maintainers "Nguyen Hoang An <nguyenhoangan1235@gmail.com>")

(authors "Nguyen Hoang An")

(license "BSD-3-Clause")

(homepage "https://github.com/nguyenhoangan-monkey/cptpp-fuzz")

(bug_reports "https://github.com/nguyenhoangan-monkey/cptpp-fuzz/issues")

(package
 (name cptpp-fuzz)
 (synopsis "CPTPP rules of origin and tariffs calculator fuzzing suite")
 (description
  "An automated fuzz testing harness for cptpp-calculator functions"))
