// SPDX-License-Identifier: GPL-3.0-only
// Copyright (C) 2026 Nguyễn Hoàng An

(lang dune 3.23)

(name cptpp-fuzz)

(generate_opam_files true)

(maintainers "Nguyen Hoang An <nguyenhoangan1235@gmail.com>")

(authors "Nguyen Hoang An")

(license "BSD-3-Clause")

(homepage "https://github.com/nguyenhoangan-monkey/cptpp-project")

(bug_reports "https://github.com/nguyenhoangan-monkey/cptpp-project/issues")

(package
 (name cptpp-fuzz)
 (synopsis "CPTPP rules of origin and tariffs calculator fuzzing suite")
 (description "An automated fuzz testing harness for cptpp-calc functions")
 (depends
  (ocaml
   (>= "5.4.0"))
  (dune
   (>= "3.23"))
  afl-persistent
  uutf))
