// SPDX-License-Identifier: GPL-3.0-only
// Copyright (C) 2026 Nguyễn Hoàng An

(executable
 (name fuzz)
 (package cptpp-fuzz)
 (public_name cptpp-fuzz)
 (libraries afl-persistent uutf)
 (modes exe))

(copy_files ../../../lib/domain/hs_code.ml)

(copy_files ../../../lib/domain/hs_code.mli)

(executable
 (name check_queue)
 (libraries hs_code))

(executable
 (name seed_generator)
 (modes exe))
